base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-router-deployment
spec:
  selector:
    matchLabels:
      app: nginx-reverse-proxy
  template:
    metadata:
      labels:
        app: nginx-reverse-proxy
    spec:
      containers:
        - name: nginx-router
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy-service
spec:
  selector:
    app: nginx-reverse-proxy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
