base/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-django
spec:
  selector:
    app: k8s-django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
