base/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-django
  template:
    metadata:
      labels:
        app: k8s-django
    spec:
      containers:
        - name: k8s-django
          image: elhongsh/k8s-django:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-django-service
spec:
  selector:
    app: k8s-django
  ports:
    - port: 3000
      targetPort: 8000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: k8s-django-service
                port:
                  number: 3000
            pathType: Prefix
            path: /
